--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@
   text-align: center;
   position: absolute;
   width: 100%;
+  line-height: 2.5rem;
 }
 
 .stat .temp {
@@ -39,13 +40,33 @@
 }
 
 .stat .icon-cpu:before {
-  content: "\\f002";
+  content: '\f002';
 }
 
-.stat .icon-carbattery:before {
-  content: "\\f553";
+.stat .icon-batteryfull:before {
+  content: '\f0fa';
+}
+
+.stat .icon-batteryeighty:before {
+  content: '\f0f9';
+}
+
+.stat .icon-batterysixty:before {
+  content: '\f0f8';
+}
+
+.stat .icon-batteryforty:before {
+  content: '\f0f7';
+}
+
+.stat .icon-batterytwenty:before {
+  content: '\f0f6';
+}
+
+.stat .icon-batteryempty:before {
+  content: '\f0f5';
 }
 
 .stat .icon-fan:before {
-  content: "\\f66f";
+  content: '\f66f';
 }
