#18 - Use React JSX syntax

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 }
 
 .stats {
-    display: flex;
+  display: flex;
 }
 
 .stat {
@@ -33,7 +33,8 @@
   fill: transparent;
 }
 
-[class^='icon-'], [class*=' icon-'] {
+[class^='icon-'],
+[class*=' icon-'] {
   font-family: 'Icons';
   background: none;
   width: auto;
@@ -71,4 +72,29 @@
 
 .icon-fan:before {
   content: '\f66f';
+}
+
+.animation-fan {
+  -webkit-animation: spin 2s linear infinite;
+  -moz-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(-360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(-360deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
 }
