#18 - Use React JSX syntax

--- a/index.css
+++ b/index.css
@@ -74,27 +74,28 @@
   content: '\f66f';
 }
 
-.animation-fan {
-  -webkit-animation: spin 2s linear infinite;
-  -moz-animation: spin 2s linear infinite;
+.animation-fan-20 {
   animation: spin 2s linear infinite;
 }
 
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(-360deg);
-  }
+.animation-fan-40 {
+  animation: spin 1s linear infinite;
 }
 
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(-360deg);
-  }
+.animation-fan-60 {
+  animation: spin .75s linear infinite;
+}
+
+.animation-fan-80 {
+  animation: spin .5s linear infinite;
+}
+
+.animation-fan-100 {
+  animation: spin .25s linear infinite;
 }
 
 @keyframes spin {
   100% {
-    -webkit-transform: rotate(-360deg);
     transform: rotate(-360deg);
   }
 }
