--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Icons';
+  font-family: 'Icons'; /* NOSONAR */
   src: url('icons.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -1432,7 +1432,6 @@
 .icon-amazon:before{content:'\f527'}
 .icon-openid:before{content:'\f528'}
 .icon-digg:before{content:'\f529'}
-.icon-retweet:before{content:'\f52a'}
 .icon-moonnew:before{content:'\f52b'}
 .icon-moonwaxingcrescent:before{content:'\f52c'}
 .icon-moonfirstquarter:before{content:'\f52d'}
